# mcp-jira

./: README.md  main.py  pyproject.toml
src/mcp_jira/: __init__.py  __main__.py  server.py
