[project]
name = "mcp-jira"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jira>=3.0.1",
    "mcp[cli]>=1.2.0",
]

[project.scripts]
mcp-jira = "mcp_jira:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
